test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-shared.good
assign-nonnil-shared-from-oknil-shared.chpl:8: error: cannot assign to a non-nilable shared from a nilable shared
